--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "express": "^4.15.2",
+    "http-auth": "^3.1.3",
     "jquery": "^3.1.1",
     "pug": "^2.0.0-beta11"
   },
