--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "express": "^4.15.2",
     "http-auth": "^3.1.3",
     "jquery": "^3.1.1",
