--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ static/media
 static/dist
 static/bundle.js
 data
+list.json
 
 # Created by https://www.gitignore.io/api/node,sublimetext,windows,macos,linux
 
