--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "main.js",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "http-auth": "^3.1.3",
     "jquery": "^3.1.1",
-    "pug": "^2.0.0-beta11"
+    "plyr": "^2.0.11",
+    "pug": "^2.0.0-beta11",
+    "rangetouch": "0.0.9"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
