--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jquery": "^3.1.1",
     "plyr": "^2.0.11",
     "pug": "^2.0.0-beta11",
-    "rangetouch": "0.0.9"
+    "rangetouch": "0.0.9",
+    "sweetalert": "^1.1.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
