--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
+    "express-session": "^1.15.1",
     "http-auth": "^3.1.3",
     "jquery": "^3.1.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "plyr": "^2.0.11",
     "pug": "^2.0.0-beta11",
     "rangetouch": "0.0.9",
