--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
-    "browser-sync": "^2.18.7",
+    "browser-sync": "^2.18.8",
     "browserify": "^14.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-nodemon": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^2.0.1",
