--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "formidable": "^1.1.1",
     "http-auth": "^3.1.3",
     "jquery": "^3.1.1",
     "passport": "^0.3.2",
