--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "plyr": "^2.0.11",
     "pug": "^2.0.0-beta11",
     "rangetouch": "0.0.9",
+    "rimraf": "^2.6.1",
     "srt2vtt": "^1.3.1",
     "sweetalert": "^1.1.3",
     "uuid": "^3.0.1"
