--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "busboy": "^0.2.14",
     "compression": "^1.6.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
-    "formidable": "^1.1.1",
     "http-auth": "^3.1.3",
     "jquery": "^3.1.1",
     "passport": "^0.3.2",
